--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My Locations</span>
+          <span class="mdl-layout-title">Parks</span>
         </div>
       </header>
 
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">My Locations</span>
+        <span class="mdl-layout-title">Parks</span>
 
         <hr>
 
@@ -50,6 +50,6 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script defer src="/node_modules/knockout/build/output/knockout-latest.js"></script>
     <script defer src="js/maps.js"></script>
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCt-64SW_OgFbK0w1wjlYD-aMBbfsfC5eY&v=3&callback=MAPS.init"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=MAPS.init"></script>
   </body>
 </html>
