--- a/index.html
+++ b/index.html
@@ -46,10 +46,18 @@
 
     </div>
 
-    <script defer src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script defer src="/node_modules/knockout/build/output/knockout-latest.js"></script>
-    <script defer src="js/maps.js"></script>
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=MAPS.init"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="/node_modules/knockout/build/output/knockout-latest.js"></script>
+    <script src="js/maps.js"></script>
+    <script>
+      function googleInit() {
+        maps.init();
+      }
+      function googleError() {
+        alert('Could not load google maps api');
+      }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=googleInit" onerror="googleError()"></script>
   </body>
 </html>
