--- a/index.html
+++ b/index.html
@@ -50,14 +50,6 @@
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="/node_modules/knockout/build/output/knockout-latest.js"></script>
     <script src="js/maps.js"></script>
-    <script>
-      function googleInit() {
-        maps.init();
-      }
-      function googleError() {
-        alert('Could not load google maps api');
-      }
-    </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=googleInit" onerror="googleError()"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=maps.init" onerror="maps.error()"></script>
   </body>
 </html>
